Update _config.yml and footer.html

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ minima:
     twitter: lrsbrgrn
     github:  lorisbergeron
     linkedin: lorisbergeron
+    instagram: lorisbergeron
 
 # Build settings
 theme: minima
