--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ minima:
     twitter: lrsbrgrn
     github:  lorisbergeron
     linkedin: lorisbergeron
-    telegram: ""
+    instagram: lorisbergeron
 
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in order as they should show up
 header_pages:
