Modification of the blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Blog settings
-title: Loris Bergeron's Blog
+title: Loris Bergeron
 description: > # This means to ignore newlines until "show_excerpts:"
   Programming, Open Source, AI, Microsoft, DevOps, .NET and More.
 
