Rename website title and add author name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # Blog settings
-title: Loris Bergeron
+title: Loris Bergeron's Blog
+author: 
+  name: Loris Bergeron
 description: > # This means to ignore newlines until "show_excerpts:"
   Programming, Open Source, AI, Microsoft, DevOps, .NET and More.
 
