Trying again to fix Disqus

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ author:
   name: Loris Bergeron
 description: > # This means to ignore newlines until "show_excerpts:"
   Programming, Open Source, AI, Microsoft, DevOps, .NET and More.
-url: https://lorisbergeron.github.io
+baseurl: ""
+url: "lorisbergeron.github.io"
 
 show_excerpts: true # Set to true to show excerpts on the homepage
 
