--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ google_analytics: UA-170074037-1
 disqus:
   # Leave shortname blank to disable comments site-wide.
   # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
-  shortname: lorisbergeron
+  shortname: loris-bergerons-blog
 
 # Plugins statement
 plugins:
